--- a/custom-addons/hr_medical_coverage/views/medical_pre_request.xml
+++ b/custom-addons/hr_medical_coverage/views/medical_pre_request.xml
@@ -6,7 +6,7 @@
         <field name="name">hr_medical_pre_request.view.form</field>
         <field name="model">hr.medical.pre.request</field>
         <field name="arch" type="xml">
-            <form string="Request for Medical">
+            <form string="Credit">
                 <header>
                     <!-- Submit Button (Visible only in Draft State) -->
                     <button name="actionSubmit" type="object" string="Submit"
@@ -44,6 +44,9 @@
                             attrs="{'readonly': [('status', '!=', 'draft')]}" />
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_ids" widget="mail_thread" />
+                </div>
             </form>
         </field>
     </record>
@@ -53,8 +56,9 @@
         <field name="name">hr_medical_pre_request.view.tree</field>
         <field name="model">hr.medical.pre.request</field>
         <field name="arch" type="xml">
-            <tree string="Request for Medical">
-                <field name="create_date" />
+            <tree string="Credit">
+                <field name="create_date" string="Date" />
+                <field name="create_uid" string="Employee" />
                 <field name="organization_id" />
                 <field name="description" />
                 <field name="hr_comment" />
