--- a/custom-addons/hr_medical_coverage/views/menu.xml
+++ b/custom-addons/hr_medical_coverage/views/menu.xml
@@ -1,7 +1,7 @@
 <odoo>
-    <!-- Action for Medical Coverage Requests -->
+    <!-- Action for Refund -->
     <record id="action_medical_coverage" model="ir.actions.act_window">
-        <field name="name">Medical Coverage Requests</field>
+        <field name="name">Refund</field>
         <field name="res_model">hr.medical.coverage</field>
         <field name="view_mode">tree,form</field>
     </record>
@@ -16,7 +16,7 @@
     <!-- action for medical pre request -->
 
     <record id="action_medical_pre_request" model="ir.actions.act_window">
-        <field name="name">Request for Medical</field>
+        <field name="name">Credit</field>
         <field name="res_model">hr.medical.pre.request</field>
         <field name="view_mode">tree,form</field>
     </record>
@@ -50,7 +50,7 @@
         sequence="2" />
 
     <menuitem id="menu_medical_coverage_organization"
-        name="Organization Registration"
+        name="Institution"
         parent="menu_medical_coverage_root"
         action="action_medical_coverage_organization"
         groups="hr_medical_coverage.group_hr_director"
