medical coverage fixed

--- a/custom-addons/hr_medical_coverage/views/medical_coverage.xml
+++ b/custom-addons/hr_medical_coverage/views/medical_coverage.xml
@@ -65,7 +65,8 @@
                                 attrs="{'readonly': [('status', '!=', 'draft')]}" />
                         </group>
                         <group string="Total Requested Amount">
-                            <field name="totalRequestedAmount" readonly="1" />
+                            <field name="totalRequestedAmount" readonly="1"
+                                decoration-success="totalRequestedAmount > 0" />
                         </group>
                     </group>
                 </sheet>
