--- a/custom-addons/hr_medical_coverage/views/medical_pre_request.xml
+++ b/custom-addons/hr_medical_coverage/views/medical_pre_request.xml
@@ -10,7 +10,7 @@
                 <header>
                     <!-- Submit Button (Visible only in Draft State) -->
                     <button name="actionSubmit" type="object" string="Submit"
-                        attrs="{'invisible': [('status', '!=', 'draft')]}" class="btn-primary"
+                        attrs="{'invisible': [('is_employee', '=', False)]}" class="btn-primary"
                         confirm="Are you sure you want to process this?" />
 
                     <!-- HR Approval Buttons (Visible only in Submitted State) -->
@@ -28,6 +28,7 @@
                 </header>
                 <sheet>
                     <group>
+                        <field name="is_employee" invisible="1" />
                         <field name="description" attrs="{'readonly': [('status', '!=', 'draft')]}" />
                         <field name="organization_id"
                             options="{'no_create': True, 'no_create_edit':True}"
