--- a/custom-addons/hr_performance/views/performance_measure_views.xml
+++ b/custom-addons/hr_performance/views/performance_measure_views.xml
@@ -6,6 +6,8 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
+                <field name="from_date" />
+                <field name="to_date" />
                 <field name="survey_id" />
                 <field name="scheduled_date" />
                 <field name="state" />
@@ -30,14 +32,23 @@
                     <field name="state" widget="statusbar" statusbar_visible="draft,active,closed" />
                 </header>
                 <sheet>
-                    <group>
-                        <field name="name" placeholder="2024 1 - 6 month evaulation" />
-                        <field name="survey_id" />
-                        <field name="scheduled_date" />
-                        <field name="state" readonly="1" />
-                        <field name="evaluations_created" readonly="1" />
+                    <group col="2">
+                        <group>
+                            <field name="name" placeholder="2024 1 - 6 month evaulation" />
+                            <field name="from_date" />
+                            <field name="to_date" />
+                            <field name="survey_id" />
+                        </group>
+                        <group>
+                            <field name="scheduled_date" />
+                            <field name="state" readonly="1" />
+                            <field name="evaluations_created" readonly="1" />
+                        </group>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_ids" widget="mail_thread" />
+                </div>
             </form>
         </field>
     </record>
@@ -115,10 +126,10 @@
                 </header>
                 <sheet>
                     <group>
-                        <field name="schedule_id" readonly="1" options="{'no_open': True}"/>
+                        <field name="schedule_id" readonly="1" options="{'no_open': True}" />
                         <field name="employee_id" readonly="1" />
                         <field name="manager_id" readonly="1" />
-                        <field name="survey_id" readonly="1" options="{'no_open': True}"/>
+                        <field name="survey_id" readonly="1" options="{'no_open': True}" />
                         <field name="evaluation_status" readonly="1" />
                         <field name="total_score" readonly="1" />
                         <field name="employee_comment"
@@ -142,6 +153,9 @@
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_ids" widget="mail_thread" />
+                </div>
             </form>
         </field>
     </record>
