--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -12,11 +12,46 @@
             <tree string="Salary Increment">
                 <field name="employee_id" />
                 <field name="contract_id" />
-                <field name="grade_id" />
-                <field name="increment_id" />
-                <field name="wage_id" />
-                <field name="currency_id" />
+                <!-- <field name="grade_id" /> -->
+                <!-- <field name="increment_id" /> -->
+                <!-- <field name="wage_id" /> -->
+                <!-- <field name="currency_id" /> -->
             </tree>
+        </field>
+    </record>
+    <record id="view_hr_salary_increment_form" model="ir.ui.view">
+        <field name="name">hr.salary.increment.form</field>
+        <field name="model">hr.salary.increment</field>
+        <field name="arch" type="xml">
+            <form string="Salary Increment">
+                <header>
+                    <button name="action_submit" type="object" string="Submit Request"
+                        class="btn-primary" states="draft" />
+                    <button name="action_approve" type="object" string="Approve" class="btn-success"
+                        states="submitted" />
+                    <button name="action_reject" type="object" string="Reject" class="btn-danger"
+                        states="submitted" />
+                    <field name="state" widget="statusbar"
+                        statusbar_visible="draft,submitted,approved,rejected" />
+                </header>
+                <sheet>
+                    <group>
+                        <field name="employee_id" required="1" />
+                        <field name="contract_id" readonly="1" />
+                    </group>
+                    <group>
+                        <field name="current_wage" readonly="1" />
+                        <field name="current_increment_level_id"/>
+                        <field name="next_increment_level_id" required="1"/>
+                        <field name="new_wage" readonly="1" />
+                        <field name="average_score" readonly="1" />
+                        <field name="is_valid_increment" readonly="1" />
+                    </group>
+                    <group>
+                        <field name="remarks" readonly="1" widget="text" />
+                    </group>
+                </sheet>
+            </form>
         </field>
     </record>
 </odoo>
