--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -40,9 +40,10 @@
                         <field name="contract_id" readonly="1" />
                     </group>
                     <group>
+                        <field name="pay_grade_id" />
                         <field name="current_wage" readonly="1" />
-                        <field name="current_increment_level_id"/>
-                        <field name="next_increment_level_id" required="1"/>
+                        <field name="current_increment_level_id" />
+                        <field name="next_increment_level_id" required="1" />
                         <field name="new_wage" readonly="1" />
                         <field name="average_score" readonly="1" />
                         <field name="is_valid_increment" readonly="1" />
