--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!-- Action for Salary Increment -->
     <record id="hr_salary_increment_action" model="ir.actions.act_window">
         <field name="name">Salary Increment</field>
         <field name="res_model">hr.salary.increment</field>
         <field name="view_mode">tree,form</field>
     </record>
+
+    <!-- Tree View for Salary Increment -->
     <record id="hr_salary_increment_view_tree" model="ir.ui.view">
         <field name="name">hr_salary_increment.view.tree</field>
         <field name="model">hr.salary.increment</field>
         <field name="arch" type="xml">
             <tree string="Salary Increment">
                 <field name="employee_id" />
-                <field name="contract_id" />
-                <!-- <field name="grade_id" /> -->
-                <!-- <field name="increment_id" /> -->
-                <!-- <field name="wage_id" /> -->
-                <!-- <field name="currency_id" /> -->
+                <field name="pay_grade_id" />
+                <field name="current_wage" />
+                <field name="suggested_increment_level_id" />
+                <field name="next_increment_level_id" />
+                <field name="new_wage" />
+                <field name="state" />
+                <field name="average_score" />
             </tree>
         </field>
     </record>
+
+    <!-- Form View for Salary Increment -->
     <record id="view_hr_salary_increment_form" model="ir.ui.view">
         <field name="name">hr.salary.increment.form</field>
         <field name="model">hr.salary.increment</field>
@@ -27,32 +34,46 @@
                 <header>
                     <button name="action_submit" type="object" string="Submit Request"
                         class="btn-primary" states="draft" />
-                    <button name="action_approve" type="object" string="Approve" class="btn-success"
-                        states="submitted" />
-                    <button name="action_reject" type="object" string="Reject" class="btn-danger"
-                        states="submitted" />
+                    <button name="action_approve" type="object" string="Approve"
+                        class="btn-success" states="submitted" />
+                    <button name="action_reject" type="object" string="Reject"
+                        class="btn-danger" states="submitted" />
                     <field name="state" widget="statusbar"
                         statusbar_visible="draft,submitted,approved,rejected" />
                 </header>
                 <sheet>
-                    <group>
-                        <field name="employee_id" required="1" />
-                        <field name="contract_id" readonly="1" />
+                    <group col="2">
+                        <!-- Employee and Contract Information -->
+                        <group>
+                            <field name="employee_id" required="1" />
+                            <field name="contract_id" readonly="1" />
+                            <field name="pay_grade_id" readonly="1" />
+                            <field name="current_wage" readonly="1" />
+                            <field name="current_increment_level_id" readonly="1" />
+                        </group>
+                        <!-- Increment Details -->
+                        <group>
+                            <field name="suggested_increment_level_id" readonly="1"
+                                string="Suggested Increment Level" />
+                            <field name="next_increment_level_id" required="1"
+                                string="Final Increment Level" />
+                            <field name="new_wage" readonly="1" />
+                            <field name="average_score" readonly="1" />
+                            <field name="is_valid_increment" readonly="1" />
+                        </group>
                     </group>
                     <group>
-                        <field name="pay_grade_id" />
-                        <field name="current_wage" readonly="1" />
-                        <field name="current_increment_level_id" />
-                        <field name="next_increment_level_id" required="1" />
-                        <field name="new_wage" readonly="1" />
-                        <field name="average_score" readonly="1" />
-                        <field name="is_valid_increment" readonly="1" />
-                    </group>
-                    <group>
-                        <field name="remarks" readonly="1" widget="text" />
+                        <field name="remarks" widget="text" placeholder="Add remarks or notes here..." />
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
+
+    <!-- Menu Item for Salary Increment -->
+    <menuitem id="hr_salary_increment_menu"
+              name="Salary Increment"
+              parent="hr.menu_hr_root"
+              action="hr_salary_increment_action"
+              sequence="10" />
 </odoo>
