--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -1,15 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Action for Salary Increment -->
     <record id="hr_salary_increment_action" model="ir.actions.act_window">
         <field name="name">Salary Increment</field>
         <field name="res_model">hr.salary.increment</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="context">{'default_state': 'draft'}</field>
+    </record>
+
+    <!-- Kanban View for Salary Increment -->
+    <record id="hr_salary_increment_view_kanban" model="ir.ui.view">
+        <field name="name">hr.salary.increment.kanban</field>
+        <field name="model">hr.salary.increment</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <field name="state" />
+                <field name="employee_name" />
+                <field name="job_title" />
+                <field name="is_eligible" />
+                <field name="pay_grade_id" />
+                <field name="current_wage" />
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div class="oe_kanban_content">
+                                <strong><field name="employee_name" /></strong>
+                                <div><field name="job_title" /></div>
+                                <div>Pay Grade: <field name="pay_grade_id" /></div>
+                                <div>Current Wage: <field name="current_wage" /></div>
+                                <div>Eligible: <field name="is_eligible" /></div>
+                                <div>Status: <field name="state" /></div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
     </record>
 
     <!-- Tree View for Salary Increment -->
     <record id="hr_salary_increment_view_tree" model="ir.ui.view">
-        <field name="name">hr_salary_increment.view.tree</field>
+        <field name="name">hr.salary.increment.tree</field>
         <field name="model">hr.salary.increment</field>
         <field name="arch" type="xml">
             <tree string="Salary Increment">
@@ -19,8 +49,8 @@
                 <field name="suggested_increment_level_id" />
                 <field name="next_increment_level_id" />
                 <field name="new_wage" />
-                <field name="state" />
                 <field name="average_score" />
+                <field name="state" />
             </tree>
         </field>
     </record>
@@ -59,7 +89,7 @@
                                 string="Final Increment Level" />
                             <field name="new_wage" readonly="1" />
                             <field name="average_score" readonly="1" />
-                            <field name="is_valid_increment" readonly="1" />
+                            <field name="is_eligible" readonly="1" />
                         </group>
                     </group>
                     <group>
@@ -69,11 +99,4 @@
             </form>
         </field>
     </record>
-
-    <!-- Menu Item for Salary Increment -->
-    <menuitem id="hr_salary_increment_menu"
-              name="Salary Increment"
-              parent="hr.menu_hr_root"
-              action="hr_salary_increment_action"
-              sequence="10" />
 </odoo>
