--- a/custom-addons/hr_termination/views/termination_views.xml
+++ b/custom-addons/hr_termination/views/termination_views.xml
@@ -4,7 +4,7 @@
     <record id="employee_termination_action" model="ir.actions.act_window">
         <field name="name">Termination</field>
         <field name="res_model">termination.request</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
     </record>
     <!--Form view employee.promotion model-->
     <record id='employee_termination_view_form' model='ir.ui.view'>
@@ -12,8 +12,29 @@
         <field name="model">termination.request</field>
         <field name="arch" type="xml">
             <form string="Termination">
+                <header>
+                    <!-- Approval by Department service director -->
+                    <button name="action_request_termination" string="Request Termination" type="object" class="btn-primary"  attrs="{'invisible': [('combined_state', 'in', ['processing', 'approved'])]}"/>
+                    <button name="action_by_service_request_approval" type="object" string="Approve" attrs="{'invisible': ['|', ('is_manager', '=', False), ('state_by_service', 'in', ['approved', 'refused'])]}" />
+                    <button name="action_by_service_refuse_request" type="object" string="Refuse" attrs="{'invisible': ['|', ('is_manager', '=', False), ('state_by_service', 'in', ['approved', 'refused'])]}" />
+
+
+                    <!-- Approval by HR director -->
+                    <button name="action_by_director_request_approval" type="object" string="Accept" groups="hr_termination.group_hr_training_department_director" attrs="{'invisible': ['|', ('state_by_director', 'in', ['approved', 'refused']),  ('state_by_service', '!=', 'approved')]}"/>
+                    <button name="action_by_director_refuse_request" type="object" string="Refuse" groups="hr_termination.group_hr_training_department_director" attrs="{'invisible': ['|', ('state_by_director', 'in', ['approved', 'refused']),  ('state_by_service', '!=', 'approved')]}"/>
+
+                    <!-- Approval by HR DCEO -->
+                    <button name="action_by_dceo_request_approval" type="object" string="Accept" groups="hr_termination.group_hr_training_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']),  ('state_by_director', '!=', 'approved')]}"/>
+                    <button name="action_by_dceo_refuse_request" type="object" string="Refuse" groups="hr_termination.group_hr_training_dceo" attrs="{'invisible': ['|', ('state_by_dceo', 'in', ['approved', 'refused']),  ('state_by_director', '!=', 'approved')]}"/>
+
+                    <!-- Approval by CEO -->
+                    <button name="action_by_ceo_request_approval" type="object" string="Accept" groups="hr_termination.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_dceo', '!=', 'approved')]}"/>
+                    <button name="action_by_ceo_refuse_request" type="object" string="Refuse" groups="hr_termination.group_hr_training_ceo" attrs="{'invisible': ['|', ('state_by_ceo', 'in', ['approved', 'refused']),  ('state_by_dceo', '!=', 'approved')]}"/>
+
+
+                    <field name="combined_state" widget="statusbar" statusbar_visible="draft,processing,approved,refused"/>
+                </header>
                 <sheet>
-    
                     <div class="oe_title">
                         <h1>
                             <field class="text-break" name="name" />
@@ -23,9 +44,16 @@
                         <group>
                             <field name="employee_id"/>
                             <field name="department_id"/>
-                             <field name="manager_id"/>
+                            <field name="manager_id"/>
                             <field name="termination_date"/>
                             <field name="reason"/>
+                            <field name="combined_state" invisible="1"/>
+                            <field name="is_manager" invisible="1"/>
+                            <field name="state_by_service" invisible="1"/>
+                            <field name="state_by_director" invisible="1"/>
+                            <field name="state_by_dceo" invisible="1"/>
+                            <field name="state_by_ceo" invisible="1"/>
+
                         </group>
                     </group>
                     <!-- <notebook>
@@ -42,6 +70,76 @@
             </form>
         </field>
     </record>
+
+    <record id="view_termination_request_kanban" model="ir.ui.view">
+        <field name="name">termination.request.kanban</field>
+        <field name="model">termination.request</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="combined_state" quick_create="false" class="o_kanban_view">
+                <field name="combined_state" />
+                <field name="employee_id" />
+                <field name="manager_id" />
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_card shadow-sm rounded p-3 bg-light text-dark" t-attf-class="oe_kanban_global_click">
+                            <!-- Header with Title -->
+                            <div class="card-header bg-warning text-white text-center rounded-top" attrs="{'invisible': [('combined_state', 'in', ['approved', 'refused', 'draft'])]}">
+                                <strong>
+                                    <field name="name" />
+                                </strong>
+                            </div>
+
+                            <div class="card-header bg-success text-white text-center rounded-top" attrs="{'invisible': [('combined_state', 'in', ['processing', 'refused', 'draft'])]}">
+                                <strong>
+                                    <field name="name" />
+                                </strong>
+                            </div>
+
+                            <div class="card-header bg-danger text-white text-center rounded-top" attrs="{'invisible': [('combined_state', 'in', ['processing', 'approved', 'draft'])]}">
+                                <strong>
+                                    <field name="name" />
+                                </strong>
+                            </div>
+
+                            <div class="card-header bg-info text-white text-center rounded-top" attrs="{'invisible': [('combined_state', 'in', ['processing', 'approved', 'refused'])]}">
+                                <strong>
+                                    <field name="name" />
+                                </strong>
+                            </div>
+
+                      
+                            <!-- Content Section -->
+                            <div class="card-body">
+                                <div class="mb-2">
+                                    <span class="font-weight-bold">Employee: </span>
+                                    <span class="text-info">
+                                        <field name="employee_id" />
+                                    </span>
+                                </div>
+                                <div class="mb-2">
+                                    <span class="font-weight-bold">Manager: </span>
+                                    <span class="text-success">
+                                        <field name="manager_id" />
+                                    </span>
+                                </div>
+                            </div>
+
+                            <!-- Footer -->
+                            <div t-if="record.combined_state.raw_value" class="card-footer text-center bg-secondary text-white rounded-bottom">
+                                <span>Status: </span>
+                                <span t-attf-class="badge badge-warning">
+                                    <field name="combined_state" />
+                                </span>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
+
+
     <!--Tree view employee.promotion model-->
     <record id="employee_termination_view_tree" model="ir.ui.view">
         <field name="name">employee.termination.view.tree</field>
@@ -51,9 +149,9 @@
                 <field name="name"/>
                 <field name="department_id"/>
                 <field name="termination_date"/>
-                <field name="state"/>
+                <field name="combined_state"/>
             </tree>
         </field>
     </record>
-    
+
 </odoo>
