--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -3,38 +3,7 @@
     <record id="hr_salary_increment_action" model="ir.actions.act_window">
         <field name="name">Salary Increment</field>
         <field name="res_model">hr.salary.increment</field>
-        <field name="view_mode">kanban,tree,form</field>
-        <field name="context">{'default_state': 'draft'}</field>
-    </record>
-
-    <!-- Kanban View for Salary Increment -->
-    <record id="hr_salary_increment_view_kanban" model="ir.ui.view">
-        <field name="name">hr.salary.increment.kanban</field>
-        <field name="model">hr.salary.increment</field>
-        <field name="arch" type="xml">
-            <kanban>
-                <field name="state" />
-                <field name="employee_name" />
-                <field name="job_title" />
-                <field name="is_eligible" />
-                <field name="pay_grade_id" />
-                <field name="current_wage" />
-                <templates>
-                    <t t-name="kanban-box">
-                        <div class="oe_kanban_global_click">
-                            <div class="oe_kanban_content">
-                                <strong><field name="employee_name" /></strong>
-                                <div><field name="job_title" /></div>
-                                <div>Pay Grade: <field name="pay_grade_id" /></div>
-                                <div>Current Wage: <field name="current_wage" /></div>
-                                <div>Eligible: <field name="is_eligible" /></div>
-                                <div>Status: <field name="state" /></div>
-                            </div>
-                        </div>
-                    </t>
-                </templates>
-            </kanban>
-        </field>
+        <field name="view_mode">tree,form</field>
     </record>
 
     <!-- Tree View for Salary Increment -->
@@ -93,7 +62,8 @@
                         </group>
                     </group>
                     <group>
-                        <field name="remarks" widget="text" placeholder="Add remarks or notes here..." />
+                        <field name="remarks" widget="text"
+                            placeholder="Add remarks or notes here..." />
                     </group>
                 </sheet>
             </form>
